[tool.poetry]
name = "customer-support"
version = "0.1.0"
description = ""
authors = ["Osvaldo Sepulveda <osvaldo.sepulveda.v@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
langchain-core = "^0.3.12"
openai = "^1.52.2"
langgraph = "^0.2.39"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
tavily-python = "^0.5.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
